<resources>
    <string name="app_name">AndroidCalculator</string>
    <string name="digit_1">1</string>
    <string name="digit_2">2</string>
    <string name="digit_3">3</string>
    <string name="digit_4">4</string>
    <string name="digit_5">5</string>
    <string name="digit_6">6</string>
    <string name="digit_7">7</string>
    <string name="digit_8">8</string>
    <string name="digit_9">9</string>
    <string name="digit_0">0</string>
    <string name="symbol_dot">.</string>
    <string name="sign_equals">=</string>
    <string name="operator_plus">+</string>
    <string name="operator_minus">-</string>
    <string name="operator_mul">*</string>
    <string name="operator_div">/</string>
    <string name="backspace">⌫</string>
    <string name="clear">Clear</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="ctn">ctn</string>
    <string name="pi">π</string>
    <string name="e">e</string>
    <string name="inverse">x⁻¹</string>
    <string name="abs">|x|</string>
    <string name="ln">ln</string>
    <string name="log">log</string>
    <string name="sqrt">√</string>
    <string name="xtoy">xʸ</string>
    <string name="leftp">(</string>
    <string name="rightp">)</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string-array name="pref_precision_list_titles">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="pref_precision_list_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string name="settings_symbol">⚙</string>
    <string name="pref_title_precision">Precision</string>
    <string name="title">Super title</string>
    <string name="help_symbol">\?</string>
</resources>
